<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/logo_without_bg" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textWelcomeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/app_introduction"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cta"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_survey_cta"
            android:textColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:icon="@drawable/baseline_arrow_forward_24"
            app:iconGravity="textEnd"
            app:iconPadding="8dp"
            app:iconTint="@android:color/white"
            app:shapeAppearance="@style/ShapeAppearance.Material3.MediumComponent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="true"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <GridLayout
            android:id="@+id/shortcutsGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:useDefaultMargins="true" />

    </LinearLayout>

</ScrollView>